--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body >
     <div class="p-2">
@@ -12,21 +13,15 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">id</th>
-                    <th scope="col">Titulo</th>
-                    <th scope="col">Descripcion</th>
-                    <th scope="col">Precio</th>
-                    <th scope="col">Stock</th>
+                    <th scope="col" class="text-center">id</th>
+                    <th scope="col" class="text-center">Titulo</th>
+                    <th scope="col" class="text-center">Descripcion</th>
+                    <th scope="col" class="text-center">Precio</th>
+                    <th scope="col" class="text-center">Stock</th>
+                    <th scope="col" class="text-center">Acciones</th>
                 </tr>
             </thead>
             <tbody id="body">
-                <tr>
-                    <th>1</th>
-                    <td>producto</td>
-                    <td>askjdfskjdfhskjhf</td>
-                    <td>$50000</td>
-                    <td>5</td>
-                </tr>
             </tbody>
         </table>
     </div>
