--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Productos - Juan Vidal</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- font awesome -->
@@ -32,10 +32,9 @@
     <div class="p-2">
         <button
             type="button"
-            class="btn btn-success"
+            class="btn btn-success add-button"
             data-bs-toggle="modal"
             data-bs-target="#exampleModal"
-            data-bs-whatever="@getbootstrap"
             >
             Agregar
         </button>
@@ -45,26 +44,30 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Aaaaa</h1>
+                  <h1 class="modal-title fs-5 title" id="exampleModalLabel">Agregar Producto</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <form>
+                    <div class="mb-3" hidden>
+                      <label for="recipient-name" class="col-form-label">ID:</label>
+                      <input type="number" name="id" class="form-control" id="id">
+                    </div>
                     <div class="mb-3">
                       <label for="recipient-name" class="col-form-label">Titulo:</label>
-                      <input type="text" name="titulo" class="form-control" id="recipient-name">
+                      <input type="text" name="titulo" class="form-control" id="titulo">
                     </div>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Precio:</label>
-                        <input type="number" name="precio" class="form-control" id="recipient-name">
+                        <input type="number" name="precio" class="form-control" id="precio">
                     </div>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Stock:</label>
-                        <input type="number" name="stock" class="form-control" id="recipient-name">
+                        <input type="number" name="stock" class="form-control" id="stock">
                     </div>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Descripcion:</label>
-                        <textarea class="form-control" name="descripcion" id="message-text"></textarea>
+                        <textarea class="form-control" name="descripcion" id="descripcion"></textarea>
                     </div>
                     <div class="modal-footer">
                       <button type="submit" class="btn btn-success">Aceptar</button>
